[workspace]

members = [
    "abci",
    "config",
    "light-client",
    "light-client-js",
    "light-client-verifier",
    "p2p",
    "pbt-gen",
    "proto",
    "rpc",
    "std-ext",
    "tendermint",
    "test",
    "testgen",
    "rpc-abci"
]

exclude = [
    "proto-compiler",
    "tools/no-std-check"
]

[profile.release.package.tendermint-light-client-js]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
