[workspace]

members = [
    "abci",
    "config",
    "light-client",
    "light-client-verifier",
    "light-client-js",
    "p2p",
    "pbt-gen",
    "proto",
    "rpc",
    "std-ext",
    "tendermint",
    "test",
    "testgen"
]

exclude = [
    "proto-compiler",
    "tools/no-std-check"
]

[profile.release.package.tendermint-light-client-js]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# WORKAROUND for fizyk20/generic-array#133
# Docs build is broken without this until above PR is merged/released
[patch.crates-io.generic-array]
git = "https://github.com/fjarri/generic-array"
branch = "zeroize-docs"
