[package]
name        = "tendermint-abci"
version     = "0.20.0"
authors     = ["Thane Thomson <thane@informal.systems>"]
edition     = "2018"
license     = "Apache-2.0"
readme      = "README.md"
categories  = ["cryptography::cryptocurrencies", "network-programming"]
keywords    = ["abci", "blockchain", "bft", "consensus", "tendermint"]
repository  = "https://github.com/informalsystems/tendermint-rs"
description = """
    tendermint-abci provides a simple framework with which to build low-level
    applications on top of Tendermint.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvstore-rs"
path = "src/application/kvstore/main.rs"
required-features = [ "binary", "kvstore-app" ]

[features]
client = []
echo-app = []
kvstore-app = []
binary = [ "structopt", "tracing-subscriber" ]

[dependencies]
bytes = "1.0"
eyre = "0.6"
prost = "0.8"
tendermint-proto = { version = "0.20.0", path = "../proto" }
thiserror = "1.0"
tracing = "0.1"

structopt = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
