[package]
name        = "tendermint-abci"
version     = "0.22.0"
authors     = ["Informal Systems <hello@informal.systems>"]
edition     = "2018"
license     = "Apache-2.0"
readme      = "README.md"
categories  = ["cryptography::cryptocurrencies", "network-programming"]
keywords    = ["abci", "blockchain", "bft", "consensus", "tendermint"]
repository  = "https://github.com/informalsystems/tendermint-rs"
description = """
    tendermint-abci provides a simple framework with which to build low-level
    applications on top of Tendermint.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvstore-rs"
path = "src/application/kvstore/main.rs"
required-features = [ "binary", "kvstore-app" ]

[features]
default = ["std", "eyre_tracer"]
eyre_tracer = ["flex-error/eyre_tracer"]
client = []
echo-app = []
kvstore-app = []
binary = [ "structopt", "tracing-subscriber" ]
std = [
    "flex-error/std"
]

[dependencies]
bytes = "1.0"
prost = "0.7"
tendermint-proto = { version = "0.22.0", path = "../proto" }
tracing = "0.1"
flex-error = { version = "0.4.1", default-features = false }

structopt = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
