[package]
name        = "tendermint-abci"
version     = "0.37.0"
authors     = ["Informal Systems <hello@informal.systems>"]
edition     = "2021"
license     = "Apache-2.0"
readme      = "README.md"
categories  = ["cryptography::cryptocurrencies", "network-programming"]
keywords    = ["abci", "blockchain", "bft", "consensus", "tendermint"]
repository  = "https://github.com/informalsystems/tendermint-rs"
description = """
    tendermint-abci provides a simple framework with which to build low-level
    applications on top of Tendermint.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvstore-rs"
path = "src/application/kvstore/main.rs"
required-features = [ "binary", "client", "kvstore-app" ]

[features]
default = ["flex-error/std"]
client = []
echo-app = []
kvstore-app = []
binary = [
    "structopt",
    "tracing-subscriber/fmt",
]

[dependencies]
bytes = { version = "1.0", default-features = false }
prost = { version = "0.13", default-features = false }
tendermint-proto = { version = "0.37.0", default-features = false, path = "../proto" }
tracing = { version = "0.1", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
structopt = { version = "0.3", optional = true, default-features = false }
tracing-subscriber = { version = "0.3", optional = true, default-features = false }
