[package]
name       = "tendermint-config"
version    = "0.28.0" # Also update `html_root_url` in lib.rs and
                               # depending crates (rpc, light-node, ..) when bumping this
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs/tree/main/tendermint"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition    = "2018"

description = """
    tendermint-config provides functions for loading and validating Tendermint
    configuration files. It is moved out of the tendermint crate for no_std support
    in the tendermint crate.
    """

authors = [
    "Informal Systems <hello@informal.systems>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tendermint = { version = "0.28.0", default-features = false, path = "../tendermint" }
flex-error = { version = "0.4.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.5" }
url = { version = "2.2" }

[dev-dependencies]
pretty_assertions = "1.3.0"
