[package]
name        = "tendermint-light-client-js"
version     = "0.23.5"
authors     = ["Informal Systems <hello@informal.systems>"]
edition     = "2018"
license     = "Apache-2.0"
readme      = "README.md"
keywords    = ["blockchain", "bft", "consensus", "light-client", "tendermint"]
categories  = ["cryptography::cryptocurrencies", "network-programming"]
repository  = "https://github.com/informalsystems/tendermint-rs"
description = """
    tendermint-light-client-js provides a lightweight, WASM-based interface to
    the Tendermint Light Client's verification functionality.
    """

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0", default-features = false }
# TODO(thane): Remove once https://github.com/rustwasm/wasm-bindgen/issues/2508 is resolved
syn = { version = "=1.0.65", default-features = false }
tendermint = { version = "0.23.5", default-features = false, path = "../tendermint" }
tendermint-light-client-verifier = { version = "0.23.5", default-features = false, path = "../light-client-verifier" }
wasm-bindgen = { version = "0.2.63", default-features = false, features = [ "serde-serialize" ] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", default-features = false, optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.13", default-features = false }
