[package]
name       = "tendermint-light-client"
version    = "0.20.0"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository = "https://github.com/informalsystems/tendermint-rs"
authors    = [
  "Sean Braithwaite <sean@informal.systems>",
  "Ethan Buchman <ethan@coinculture.info>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Romain Ruetschi <romain@informal.systems>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    Implementation of the Tendermint Light Client Verification Protocol.
"""

[lib]
crate-type = ["cdylib", "rlib"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rpc-client", "lightstore-sled"]
rpc-client = ["tokio", "tendermint-rpc/http-client"]
secp256k1 = ["tendermint/secp256k1", "tendermint-rpc/secp256k1"]
lightstore-sled = ["sled"]
unstable = []

[dependencies]
tendermint = { version = "0.20.0", path = "../tendermint" }
tendermint-rpc = { version = "0.20.0", path = "../rpc", default-features = false }

contracts = "0.4.0"
crossbeam-channel = "0.4.2"
derive_more = "0.99.5"
futures = "0.3.4"
serde = "1.0.106"
serde_cbor = "0.11.1"
serde_derive = "1.0.106"
sled = { version = "0.34.3", optional = true }
static_assertions = "1.1.0"
tokio = { version = "1.0", features = ["rt"], optional = true }
flex-error = "0.3.0"

[dev-dependencies]
tendermint-testgen = { path = "../testgen" }

serde_json = "1.0.51"
gumdrop = "0.8.0"
rand = "0.7.3"
tempfile = "3.2.0"
proptest = "0.10.1"
