[package]
name       = "tendermint-light-client"
version    = "0.23.5"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository = "https://github.com/informalsystems/tendermint-rs"
authors    = [
  "Informal Systems <hello@informal.systems>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    Implementation of the Tendermint Light Client Verification Protocol.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rpc-client", "flex-error/std", "flex-error/eyre_tracer"]
rpc-client = ["tokio", "tendermint-rpc/http-client"]
secp256k1 = ["tendermint/secp256k1", "tendermint-rpc/secp256k1"]
lightstore-sled = ["sled"]
unstable = []
# Enable to execute long-running model-based tests
mbt = []

[dependencies]
tendermint = { version = "0.23.5", path = "../tendermint", default-features = false }
tendermint-rpc = { version = "0.23.5", path = "../rpc", default-features = false }
tendermint-light-client-verifier = { version = "0.23.5", path = "../light-client-verifier", default-features = false }

contracts = { version = "0.4.0", default-features = false }
crossbeam-channel = { version = "0.4.2", default-features = false }
derive_more = { version = "0.99.5", default-features = false, features = ["display"] }
futures = { version = "0.3.4", default-features = false }
serde = { version = "1.0.106", default-features = false }
serde_cbor = { version = "0.11.1", default-features = false, features = ["alloc", "std"] }
serde_derive = { version = "1.0.106", default-features = false }
sled = { version = "0.34.3", optional = true, default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.0", default-features = false, features = ["rt"], optional = true }
flex-error = { version = "0.4.4", default-features = false }

[dev-dependencies]
tendermint-testgen = { path = "../testgen", default-features = false }

serde_json = { version = "1.0.51", default-features = false }
gumdrop = { version = "0.8.0", default-features = false }
rand = { version = "0.7.3", default-features = false }
tempfile = { version = "3.2.0", default-features = false }
proptest = { version = "0.10.1", default-features = false, features = ["std"] }

[[example]]
name = "light_client"
required-features = ["rpc-client", "tendermint-rpc/http-client", "flex-error/std"]
