[package]
name = "tendermint-light-node"
authors = ["Ethan Buchman <ethan@coinculture.info>", "Ismail Khoffi <Ismail.Khoffi@gmail.com>"]
version = "0.14.0"
edition = "2018"
publish = false

[dependencies]
abscissa_tokio = "0.5"
async-trait = "0.1"
gumdrop = "0.7"
jsonrpc-core = "14.2"
jsonrpc-core-client = "14.2"
jsonrpc-http-server = "14.2"
jsonrpc-derive = "14.2"
serde = { version = "1", features = ["serde_derive"] }
tendermint = { version = "0.14.0", path = "../tendermint" }
tendermint-rpc = { version = "0.14.0", path = "../rpc", features = [ "client" ] }
tokio = { version = "0.2", features = ["full"] }

[dependencies.abscissa_core]
version = "0.5.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.0", features = ["testing"] }
once_cell = "1.2"
pretty_assertions = "0.6"
