[package]
name       = "tendermint-light-node"
version    = "0.17.0"
edition    = "2018"
license    = "Apache-2.0"
repository = "https://github.com/informalsystems/tendermint-rs"
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
authors    = [
  "Sean Braithwaite <sean@informal.systems>",
  "Ethan Buchman <ethan@coinculture.info>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Romain Ruetschi <romain@informal.systems>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    The Tendermint light-node wraps the light-client crate into a command-line
    interface tool.
    It can be used to initialize and start a standalone light client daemon and
    exposes a JSON-RPC endpoint from which you can query the current state of the
    light node.
    """

[[bin]]
name = "tendermint-light-node"
path = "src/bin/tendermint-light-node/main.rs"

[dependencies]
anomaly = { version = "0.2", features = [ "serializer" ] }
async-trait = "0.1"
gumdrop = "0.7"
jsonrpc-core = "14.2"
jsonrpc-core-client = "14.2"
jsonrpc-http-server = "14.2"
jsonrpc-derive = "14.2"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0"
sled = "0.34.3"
tendermint = { version = "0.17.0", path = "../tendermint" }
tendermint-light-client = { version = "0.17.0", path = "../light-client" }
tendermint-rpc = { version = "0.17.0", path = "../rpc", features = [ "http-client" ] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }

[dependencies.abscissa_core]
version = "0.5.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.0", features = ["testing"] }
futures = { version = "0.3", features = [ "compat" ] }
once_cell = "1.2"
pretty_assertions = "0.6"
