[package]
name = "light-spike"
version = "0.1.0"
authors = ["Romain Ruetschi <romain@informal.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = { path = "../tendermint" }
derive_more = "0.99.5"
serde_derive = "1.0.106"
serde = "1.0.106"
typetag = "0.1.4"

[dev-dependencies]
serde_json = "1.0.51"
