[package]
name = "light-spike"
version = "0.1.0"
authors = ["Romain Ruetschi <romain@informal.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = { path = "../tendermint" }

anomaly = { version = "0.2.0", features = ["serializer"] }
derive_more = "0.99.5"
serde = "1.0.106"
serde_derive = "1.0.106"
thiserror = "1.0.15"
futures = "0.3.4"
color-backtrace = "0.3.0"
tokio = "0.2.20"

[dev-dependencies]
serde_json = "1.0.51"
