[package]
name = "tendermint-mbt-utils"
version = "0.1.0"
authors = ["Andrey Kuprianov <andrey@informal.systems>"]
edition = "2018"

[dependencies]
tendermint = { path = "../tendermint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.51"
gumdrop = "0.8.0"
rand = "0.7.3"
rand_xorshift = "0.2.0"
sha2 = { version = "0.9", default-features = false }
signatory = { version = "0.20", features = ["ed25519", "ecdsa"] }
signatory-dalek = "0.20"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
simple-error = "0.2.1"

[[bin]]
name = "mbt-tendermint-produce"
path = "src/tendermint-produce.rs"