[package]
name        = "tendermint-p2p"
version     = "0.21.0"
edition     = "2018"
license     = "Apache-2.0"
repository  = "https://github.com/informalsystems/tendermint-rs"
homepage    = "https://tendermint.com"
readme      = "README.md"
keywords    = ["p2p", "tendermint", "cosmos"]
categories  = ["cryptography::cryptocurrencies", "network-programming"]
authors     = [
  "Informal Systems <hello@informal.systems>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
  "Tony Arcieri <tony@iqlusion.io>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
]

description = """
    The Tendermint P2P stack in Rust.
    """


[features]
default = ["std", "eyre_tracer"]
eyre_tracer = ["flex-error/eyre_tracer"]
amino = ["prost-derive"]
std = [
    "flex-error/std"
]

[dependencies]
chacha20poly1305 = "0.8"
ed25519-dalek = "1"
eyre = "0.6"
flume = "0.10.7"
hkdf = "0.10.0"
merlin = "2"
prost = "0.7"
rand_core = { version = "0.5", features = ["std"] }
sha2 = "0.9"
subtle = "2"
x25519-dalek = "1.1"
zeroize = "1"
signature = "1.3.0"
aead = "0.4.1"
flex-error = { version = "0.4.1", default-features = false }

# path dependencies
tendermint = { path = "../tendermint", version = "0.21.0" }
tendermint-proto = { path = "../proto", version = "0.21.0" }
tendermint-std-ext = { path = "../std-ext", version = "0.21.0" }

# optional dependencies
prost-derive = { version = "0.7", optional = true }
