[package]
name        = "tendermint-p2p"
version     = "0.24.0-pre.1"
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/informalsystems/tendermint-rs"
homepage    = "https://tendermint.com"
readme      = "README.md"
keywords    = [ "p2p", "tendermint", "cosmos" ]
categories  = [ "cryptography::cryptocurrencies", "network-programming" ]
authors     = [
  "Informal Systems <hello@informal.systems>",
  "Tony Arcieri <tony@iqlusion.io>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "xla <self@xla.is>",
]

description = """
    The Tendermint P2P stack in Rust.
    """

[lib]
test                = false

[features]
default             = [ "flex-error/std", "flex-error/eyre_tracer" ]
amino               = [ "prost-derive" ]

[dependencies]
aead                = { version = "0.4",  default-features = false }
chacha20poly1305    = { version = "0.8",  default-features = false, features = [ "reduced-round" ] }
ed25519-consensus   = { version = "1.2",  default-features = false }
eyre                = { version = "0.6",  default-features = false }
flex-error          = { version = "0.4",  default-features = false }
flume               = { version = "0.10", default-features = false }
hkdf                = { version = "0.10", default-features = false }
merlin              = { version = "2.0",  default-features = false }
prost               = { version = "0.9",  default-features = false }
rand_core           = { version = "0.5",  default-features = false, features = [ "std" ] }
sha2                = { version = "0.9",  default-features = false }
signature           = { version = "1.3",  default-features = false }
subtle              = { version = "2.0",  default-features = false }
x25519-dalek        = { version = "1.1",  default-features = false, features = [ "u64_backend" ] }
zeroize             = { version = "1.0",  default-features = false }

# path dependencies
tendermint          = { version = "0.24.0-pre.1", default-features = false, path = "../tendermint" }
tendermint-proto    = { version = "0.24.0-pre.1", default-features = false, path = "../proto" }
tendermint-std-ext  = { version = "0.24.0-pre.1", default-features = false, path = "../std-ext" }

# optional dependencies
prost-derive        = { version = "0.9", optional = true }
