[package]
name = "tendermint-pbt-gen"
version = "0.19.0"
authors = ["Shon Feder <shon@informal.systems>"]
edition = "2018"
description = """
            An internal crate providing proptest generators used across our
            crates and not depending on any code internal to those crates.
            """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time"]
time = ["chrono"]

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true}
proptest = "0.10.1"
